[package]
name = "disket"
version = "0.1.0"
license = "MIT"
authors = ["Marcos Brito <marcos.brito0507@gmail.com>"]
description = ""
repository = "https://github.com/marcos-brito/disket"
readme = "README.md"
rust-version = "1.75"
keywords = ["device", "disk", "volume"]
edition = "2021"

[features]
default = ["device", "watch", "mount"]
device = []
watch = []
mount = ["nix/mount", "windows/Win32_Storage_FileSystem"]
os = []

[dependencies]
thiserror = "2.0.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", optional = true }
