[package]
name = "disket"
version = "0.1.0"
license = "MIT"
authors = ["Marcos Brito <marcos.brito0507@gmail.com>"]
description = "Cross-platform abstractions for disks/volumes management"
repository = "https://github.com/marcos-brito/disket"
documentation = "https://docs.rs/disket"
readme = "README.md"
rust-version = "1.75"
keywords = ["device", "disk", "volume", "mount"]
categories = ["Filesystem"]
edition = "2021"

[features]
default = ["device", "watch", "mount"]
device = []
watch = []
mount = ["nix/mount", "windows/Win32_Storage_FileSystem"]
os = []

[package.metadata.docs.rs]
all-features = true
targets = [
    "aarch64-apple-ios",
    "aarch64-linux-android",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-freebsd",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[dependencies]
cfg-if = "1.0"
thiserror = "2.0.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", optional = true }
